force-app/main/default/objects/Change_Request__c/fields/Budget_Approver__c.field-meta.xml
<CustomField>
    <fullName>Budget_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>