force-app/main/default/objects/Change_Request__c/fields/Expected_Cost__c.field-meta.xml
<CustomField>
    <fullName>Expected_Cost__c</fullName>
    <label>Expected Cost</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>