force-app/main/default/objects/Change_Request__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Change_Requests1</relationshipName>
    <type>Lookup</type>
</CustomField>