force-app/main/default/objects/Change_Request__c/listViews/Vendor.listView-meta.xml
<ListView>
    <fullName>Vendor</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Vendor__c</columns>
    <filterScope>Mine</filterScope>
    <label>Vendor</label>
    <sharedTo>
        <allCustomerPortalUsers></allCustomerPortalUsers>
    </sharedTo>
</ListView>